--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainPage" />
+        <activity android:name=".latestTransactions" />
         <activity android:name=".httpTEST" />
+        <activity android:name=".About" />
     </application>
 
 </manifest>
