--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="moe.laughingcross.jummymony">
+    package="moe.laughingcross.jummymony"
+    android:versionCode="2"
+    android:versionName="0.1.1">
 
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.location" android:required="false"/>
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,7 +19,6 @@
     <uses-sdk
         android:minSdkVersion="9"
         tools:overrideLibrary="com.google.android.gms.ads, com.google.android.gms.ads.impl, com.google.android.gms, com.google.android.gms.gass, com.google.android.gms.tasks, com.google.android.gms.clearcut, com.google.android.gms.base" />
-    <uses-amzn-sdk android:minSdkVersion="0" />
 
     <application
         android:allowBackup="true"
