--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     compile 'commons-codec:commons-codec:1.10'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.android.gms:play-services-ads:10.2.0'
-    compile 'com.amazon.android:mobile-ads:5.+'
+    compile 'com.google.android.gms:play-services-ads-lite:10.2.0'
 }
